fixing IE8 layout problems

--- a/app/assets/stylesheets/scaffolds.css.scss
+++ b/app/assets/stylesheets/scaffolds.css.scss
@@ -29,6 +29,14 @@ div {
   color: green;
 }
 
+.fixed_logo {  
+  width: 90px;  
+}
+
+.fixed_thumb {  
+  width: 80px;  
+}
+
 .field_with_errors {
   padding: 2px;
   background-color: red;
